--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.3",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.2",
+    "multer": "^1.4.5-lts.1",
     "pug": "^3.0.2"
   }
 }
